<resources>
    <string name="app_name">Δώρα Εργαζομένων</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EasterChristSelect">Επιλέξτε Μισθωτός ή Hμερομίσθιος </string>
    <string name="ypalilos">Μισθωτός</string>
    <string name="ergatotexnitis">Hμερομίσθιος</string>
    <string name="inputEarnings">Μικτές Αποδοχές (μισθός ή ημερομίσθιο)</string>
    <string name="inputStartDate">Ημερομηνία Έναρξης</string>
    <string name="inputEndDate">Ημερομηνία Λήξης</string>
    <string name="buttonCalc">Υπολογίστε</string>
    <string name="buttonContactSend">Αποστολή</string>
    <string name="selectTypeOfEmp">Παρακαλώ επιλέξτε Μισθωτός ή Hμερομίσθιος!</string>
    <string name="emptyEarnings">Παρακαλώ εισάγετε τις αποδοχές σας!</string>
    <string name="emptyDateFrom">Παρακαλώ εισάγετε ημερομηνία έναρξης!</string>
    <string name="emptyDateTo">Παρακαλώ εισάγετε ημερομηνία λήξης!</string>
    <string name="datesNotValid">Η ημερομηνία λήξης είναι μικρότερη απο την ημερομηνία έναρξης!</string>
    <string name="emptyContactName">Παρακαλώ εισάγετε Ονοματεπώνυμο!</string>
    <string name="emptyContactEmail">Παρακαλώ εισάγετε έγκυρο E-mail!</string>
    <string name="emptyContactMessage">Παρακαλώ εισάγετε το μήνυμα σας!</string>
    <string name="easterFragmentTitle">Υπολογισμός Δώρου Πάσχα</string>
    <string name="christmasFragmentTitle">Υπολογισμός Δώρου Χριστουγέννων</string>
    <string name="contactFragmentTitle">Επικοινωνία</string>
    <string name="contactName">Oνοματεπώνυμο</string>
    <string name="contactEmail">E-mail επικοινωνίας</string>
    <string name="contactMessage">Το μήνυμα σας</string>
    <string name="contactMyMessage">Για τυχόν λάθη και διορθώσεις παρακαλώ συμπληρώστε τα παρακάτω πεδία και πατήστε "Αποστολή". </string>
    <string name="startFragmentTitle">Αρχική/Πληροφορίες</string>
    <string name="startFragmentEasterTitle">Πληροφορίες Δώρου Πάσχα</string>
    <string name="startFragmentChristmasTitle">Πληροφορίες Δώρου Χριστουγέννων</string>
    <string name="startFragmentEasterInfo"> <![CDATA[<b>Πληροφορίες Δώρου Πάσχα</b><br/><br/>

    <u><b>Ποιοι δικαιούνται Δώρο Πάσχα</b></u><br/><br/>
        Όλοι οι μισθωτοί που απασχολούνται στον ιδιωτικό τομέα με σχέση εξαρτημένης εργασίας αορίστου ή ορισμένου
        χρόνου δικαιούνται να λάβουν από τον εργοδότη τους Δώρο Πάσχα. Για τον υπολογισμό του ποσού του Δώρου Πάσχα
        λαμβάνεται υπόψη ο τρόπος αμοιβής των μισθωτών δηλαδή αν αμείβονται με ημερομίσθιο ή με μισθό. Η χρονική περίοδος
        που υπολογίζεται το Δώρο αρχίζει <b>από την 1 Ιανουαρίου μέχρι 30 Απριλίου</b> κάθε έτους. Συνεπώς, αν κάποιος εργαστεί
        ολόκληρο το ανωτέρω χρονικό διάστημα δικαιούται να λάβει μισό μηνιαίο μισθό αν αμείβεται με μισθό και 15 ημερομίσθια αν αμείβεται με ημερομίσθιο.
        Σε περίπτωση όμως που η σχέση εργασίας κάποιου μισθωτού με τον εργοδότη του δεν είχε διάρκεια ολόκληρο το προαναφερόμενο χρονικό διάστημα είτε γιατί
        αποχώρησε οικειοθελώς από την εργασία του, είτε γιατί απολύθηκε, δικαιούται να λάβει αναλογία Δώρου η οποία υπολογίζεται ως εξής: Προκειμένου για αμειβόμενο
        με μισθό, ποσό ίσο με 1/15 του μισού μηνιαίου μισθού ή ένα ημερομίσθιο ανάλογα με το συμφωνημένο τρόπο αμοιβής, για κάθε 8 (οκτώ) ημερολογιακές ημέρες. Σε περίπτωση
        που κάποιος εργαστεί λιγότερο από οκτώ ημέρες δικαιούται ανάλογο κλάσμα για Δώρο Πάσχα.<br/>

        <br/><u><b>Πότε καταβάλλεται το «Δώρο Πάσχα»</b></u><br/><br/>
        <b>Το Δώρο Πάσχα καταβάλλεται την Μεγάλη Τετάρτη,</b> εννοείται βέβαια ότι ο εργοδότης μπορεί να καταβάλλει το δώρο και νωρίτερα από την παραπάνω ημερομηνία. Για Το Δώρο Πάσχα
        παρακρατούνται εισφορές υπέρ του ΙΚΑ και Φόρου Μισθωτών Υπηρεσιών. Το Δώρο Πάσχα σε καμία περίπτωση δεν επιτρέπεται να καταβληθεί σε είδος, αλλά μόνο σε χρήμα.<br/>

        <br/><u><b>Χρόνοι που συνυπολογίζονται στο Δώρο Πάσχα</b></u><br/><br/>
        Λαμβάνεται υπόψη για τον υπολογισμό του Δώρου Πάσχα:<br/>
        <ul>
          <li>Ο χρόνος υποχρεωτικής αποχής από την εργασία των γυναικών πριν και μετά τον τοκετό.</li>
          <li>Tο χρονικό διάστημα κατά το οποίο εργαζόμενος σπουδαστής έλαβε σπουδαστική άδεια προκειμένου να συμμετάσχει σε εξετάσεις.</li>
          <li> Ο χρόνος άδειας λουτροθεραπείας, εφόσον υπάρχει γνωμάτευση από ασφαλιστικό οργανισμό.</li>
           <li> Αν ο μισθωτός ασθένησε κατά το ανωτέρω χρονικό διάστημα θα αφαιρεθούν μόνο οι ημέρες που έλαβε
           επίδομα ασθενείας απ τον ασφαλιστικό φορέα. Παράδειγμα: Αν ένας μισθωτός απουσίασε από την εργασία του
           λόγω ασθένειας 60 μέρες και πήρε επίδομα ασθενείας από το ασφαλιστικό του ταμείο μόνο για 40 ημέρες, θα
           αφαιρεθούν από το χρονικό διάστημα της εργασιακής σχέσης μόνο οι 40 ημέρες για τις οποίες επιδοτήθηκε και όχι οι 60.</li>
        </ul>
        <br/><br/><u><b>Χρόνοι που δεν συνυπολογίζονται στο Δώρο Πάσχα</b></u><br/><br/>
        Δεν υπολογίζονται οι μέρες κατά τις οποίες ο μισθωτός απείχε από την εργασία του αδικαιολόγητα ή λόγω άδειας χωρίς αποδοχές.<br/>

        <br/><u><b>Υπολογισμός του Δώρου Πάσχα</b></u><br/><br/>
        Βάση του υπολογισμού του Δώρου Πάσχα αποτελούν οι αποδοχές που πραγματικά καταβάλλονται στους μισθωτούς και γενικότερα οι τακτικές
        αποδοχές, εφόσον αυτές είναι ίσες ή ανώτερες των νομίμων. Σε περίπτωση που η εργασιακή σχέση έχει λυθεί πριν από την παραπάνω ημερομηνία
        το Δώρο Πάσχα υπολογίζεται με βάση τις αποδοχές που καταβάλλονταν την ημέρα που λύθηκε η εργασιακή σχέση. Στη έννοια των τακτικών αποδοχών
        περιλαμβάνονται ο μισθός ή το ημερομίσθιο, καθώς και κάθε άλλη παροχή (είτε σε χρήμα είτε σε είδος, όπως υπερεργασία, νόμιμη υπερωρία, επίδομα αδείας,
        επίδομα ισολογισμού, επιδόματα για τροφή, κατοικία, κτλ) εφ’ όσον καταβάλλεται από τον εργοδότη σαν αντάλλαγμα της παρεχόμενης από τον μισθωτό εργασίας,
        τακτικά κάθε μήνα, ή κατ’ επανάληψη περιοδικά σε ορισμένα διαστήματα του χρόνου. Στις τακτικές αποδοχές συνυπολογίζεται και το επίδομα αδείας. Συνεπώς ο
        μισθωτός θα λάβει το Δώρο Πάσχα προσαυξημένο με τον συντελεστή αδείας ο οποίος ανέρχεται σε 0,04166 π.χ εργαζόμενος με δώρο Πάσχα 900 ευρώ, με την προσαύξηση
        του συντελεστή αδείας θα πρέπει να πάρει 938 ευρώ.]]></string>
</resources>