<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactFragment"
    android:background="#dddddd"
    android:id="@+id/frmLayout">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/contact_form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/contactMyMessage"
            android:textColor="#ce3232"
            android:textSize="17sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/contactName"
            android:inputType="textPersonName"
            android:id="@+id/contactName"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/contactEmail"
            android:inputType="textEmailAddress"
            android:id="@+id/contactEmail"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:gravity="top"
            android:hint="@string/contactMessage"
            android:fitsSystemWindows="true"
            android:breakStrategy="balanced"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:padding="5dp"
            android:id="@+id/contactMessage"/>

        <Button
            android:id="@+id/sendEmailBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:textAllCaps="false"
            android:text="@string/buttonContactSend"
            android:textColor="#fff"
            />

    </LinearLayout>
</FrameLayout>